- fix the list problem that not allow to add or remove, create new ArrayList<>() solve this problem - some small changes (change comment or delete useless line)